RAG OpenAPI specification REST API Handling